--- a/msvc-usuarios/src/main/resources/application.properties
+++ b/msvc-usuarios/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.cloud.discovery.all-namespaces=true
 spring.profiles.active=dev
 
 management.endpoints.web.exposure.include=*
-management.endpoints.health.show-details=always
-management.endpoints.health.probes.enabled=true
+management.endpoint.health.show-details=always
+management.endpoint.health.probes.enabled=true
 management.health.livenessstate.enabled=true
 management.health.readinessstate.enabled=true
