--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
     <modules>
         <module>msvc-usuarios</module>
         <module>msvc-cursos</module>
+        <module>msvc-gateway</module>
     </modules>
 
     <properties>
